RM:  Terminology review
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@53918 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -77,11 +77,11 @@ message.confirm2.destroy.title=Destroy Confirmation
 message.confirm2.destroy=The content for the file will be permanently deleted, are you sure you want to continue?
 message.confirm2.destroyMultiple=The content for the files will be permanently deleted, are you sure you want to continue?
 message.confirm.hide.record.title=Hide record
-message.confirm.hide.record=You are hiding the record and you will not be able to see this record within your collaboration site anymore!
+message.confirm.hide.record=You are hiding the record and will not be able to see this record within your collaboration site anymore.
 message.select=Select...
 message.pdf-record-fonts.title=PDF Records: Embedded Font Check
-message.pdf-record-fonts.accession=Please ensure any PDF records just accessioned include the applicable embedded fonts.
-message.pdf-record-fonts.transfer=Please ensure any PDF records just transferred include the applicable embedded fonts.
+message.pdf-record-fonts.accession=Check that any PDF records just accessioned include the applicable embedded fonts.
+message.pdf-record-fonts.transfer=Check that any PDF records just transferred include the applicable embedded fonts.
 message.pdf-record-fonts.unknown=If the transfer or accession included PDF records, you should check the applicable embedded fonts have been included.
 message.request-info-success=Information requested successfully
 message.request-info-failure=An error occurred whilst requesting information
@@ -130,7 +130,7 @@ actions.create-disposition-schedule=Create Disposition Schedule
 actions.upload-new-version=Upload New Version
 actions.view-details=View Details
 actions.view-audit-log=View Audit Log
-actions.create-record=Declare As Record
+actions.create-record=Declare as Record
 actions.hide-record=Hide Record
 actions.reject=Reject
 actions.request-info=Request Information
@@ -138,7 +138,7 @@ actions.file-destruction-report=Generate Destruction Report
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
-message.accession.failure=Couldn't accession ''{0}''
+message.accession.failure=Couldn't accession ''{0}'' 
 message.accession.success=''{0}'' successfully accessioned
 message.accession-complete.failure=Couldn't complete accession ''{0}''
 message.accession-complete.success=''{0}'' accession completed
@@ -171,13 +171,13 @@ message.open-folder.failure=Couldn't open record folder ''{0}''
 message.open-folder.success=Record folder ''{0}'' was opened
 message.relinquish.failure=Couldn't release hold
 message.relinquish.success=Hold Released
-message.review-all.failure=Couldn't review records in folder ''{0}''
+message.review-all.failure=Couldn't review records in folder ''{0}'' 
 message.review-all.success=Records in folder ''{0}'' have been reviewed
-message.reviewed.failure=Couldn't review ''{0}''
+message.reviewed.failure=Couldn't review ''{0}'' 
 message.reviewed.success=''{0}'' successfully reviewed
 message.split-email.failure=Couldn't separate attachments from ''{0}''
-message.split-email.success=Successfully separated attachments from ''{0}''
-message.transfer.failure=Couldn't transfer ''{0}''
+message.split-email.success=Successfully separated attachments from ''{0}'' 
+message.transfer.failure=Couldn't transfer ''{0}'' 
 message.transfer.success=''{0}'' successfully transferred
 message.transfer-complete.failure=Couldn't complete transfer ''{0}''
 message.transfer-complete.success=''{0}'' transfer has been completed
@@ -188,7 +188,7 @@ message.undo-cutoff.success=Undo cutoff on ''{0}''
 message.unfreeze.failure=Couldn't unfreeze ''{0}''
 message.unfreeze.success=''{0}'' successfully unfrozen
 message.unfreeze-all.failure=Contents of hold ''{0}'' could not be unfrozen
-message.unfreeze-all.success=Conetents of hold ''{0}'' now unfrozen
+message.unfreeze-all.success=Contents of hold ''{0}'' now unfrozen
 message.create-disposition-schedule.failure=Couldn't create disposition schedule for ''{0}''
 message.create-disposition-schedule.success=Disposition schedule for ''{0}'' created
 message.create-record.success=Successfully declared as record
@@ -326,6 +326,7 @@ details.modified.by=Modified by
 details.by=By
 details.size=Size
 details.description=Description
+details.description.none=(None)
 # Record Category
 details.category.identifier=Record Category Identifier
 details.category.disposition-authority=Disposition Authority
