--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get.properties
@@ -12,21 +12,21 @@ label.clear-log-title=Clear Audit log?
 label.clear-log-confirmation=Are you sure you want to clear the audit log?
 label.clearing-log-message=Please wait, clearing audit log.
 label.cleared-log-message=Audit log cleared.
-message.clear-log-fail = Error clearing audit log
+message.clear-log-fail = Error clearing audit log.
 
 label.stopped-at=Audit log stopped at {0}
 label.stop-log-title=Stop Audit log?
 label.stop-log-confirmation=Are you sure you want to stop the audit log?
 label.stopping-log-message=Please wait, stopping audit log.
 label.stopped-log-message=Audit log stopped.
-message.stop-log-fail = Error stopping audit log
+message.stop-log-fail = Error stopping audit log.
 
 label.started-at=Audit log started at {0}
 label.start-log-title=Start Audit log?
 label.start-log-confirmation=Are you sure you want to start the audit log?
 label.starting-log-message=Please wait starting audit log.
 label.started-log-message=Audit log started.
-message.start-log-fail = Error starting audit log
+message.start-log-fail = Error starting audit log.
 
 label.button-clear=Clear
 label.button-stop=Stop
