--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get.properties
@@ -13,16 +13,16 @@ label.datatype.text=Text
 label.datatype.boolean=Boolean
 label.datatype.date=Date
 
-message.getpropertiesfail=Failed to retrieve custom property definitions.
+message.getpropertiesfail=Couldn't retrieve custom property definitions.
 message.noproperties=No custom properties defined.
 message.create-success=Successfully added new custom property.
-message.create-failure=Failed to add new custom property: {0}
+message.create-failure=Couldn't add new custom property: {0}
 message.edit-success=Successfully saved custom property.
-message.edit-failure=Failed to save custom property: {0}
+message.edit-failure=Couldn't save custom property: {0}
 message.delete.title=Delete custom property
 message.delete.text=Are you sure you want to delete: {0}?
 message.delete-success=Successfully deleted custom property.
-message.delete-failure=Failed to delete custom property: {0}
+message.delete-failure=Couldn't delete custom property: {0}
 
 mandatory.true=True
 mandatory.false=False
