--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get.properties
@@ -1,11 +1,11 @@
-message.get-roles-failure=Failed to retrieve user roles: {0}
-message.get-role-failure=Failed to retrieve capabilities for role: {0}
+message.get-roles-failure=Couldn't retrieve user roles: {0}
+message.get-role-failure=Couldn't retrieve capabilities for role: {0}
 message.delete.success=Successfully deleted the role.
-message.delete.failure=Failued to delete the role.
+message.delete.failure=Couldn't delete the role.
 message.edit-success=Successfully updated the role.
-message.edit-failure=Failed to update the role.
+message.edit-failure=Couldn't update the role.
 message.create-success=Successfully created the role.
-message.create-failure=Failed to create the role.
+message.create-failure=Couldn't create the role.
 
 label.roles=Roles
 label.select-all=Select All
