--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-email-mappings.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-email-mappings.get.properties
@@ -5,8 +5,8 @@ label.to=to
 label.map=Map
 label.select-email=Select email property
 
-message.loadFailure=Failure loading email mappings
-message.saveFailure=Failure saving email mappings
+message.loadFailure=Couldn't load email mappings
+message.saveFailure=Couldn't save email mappings
 message.saveSuccess=New mappings saved
 message.delete.mapping.title=Delete Mapping?
 message.delete.mapping.text=Are you sure you want to delete the mapping '{0}'?
