--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get.properties
@@ -16,9 +16,9 @@ message.confirm.removereference.title=Remove relationship
 message.confirm.removereference.text=Are you sure you want to remove ''{0}''?
 message.confirm.removereference.text.parentchild=Are you sure you want to remove ''{0}, {1}''?
 message.removereference-success=Successfully removed reference.
-message.removereference-failure=Failed to remove relationship.
+message.removereference-failure=Couldn't remove relationship.
 message.savingReference=Saving relationship...
-message.loadreference-failure=Could not load data for the relationship.
+message.loadreference-failure=Couldn't load data for the relationship.
 message.loading=Loading relationships...
 message.empty=No relationships exist.
-message.error=Could not load relationships.
+message.error=Couldn't load relationships.
