--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get.properties
@@ -33,13 +33,13 @@ button.createevent=Create Event
 button.addaction=Add Step
 button.createaction=Add Step
 
-message.getActionFailure=Could not get the dispositon schedule
+message.getActionFailure=Couldn't get the disposition schedule
 message.savingAction=Saving step
-message.saveActionFailure=The step could not be saved
+message.saveActionFailure=The step couldn't be saved
 title.deleteAction=Delete
 label.confirmDeleteAction=Are you sure you want to delete the step?
 message.deletingAction=Deleting step
 message.deleteActionSuccess=Step was successfully deleted
-message.deleteActionFailure=The step could not be deleted
+message.deleteActionFailure=Couldn't delete step
 message.loadingSteps=Loading steps...
-message.noSteps=No steps exist. Click "Add Step" to create one.
+message.noSteps=No steps exist. Click Add Step to create one.
