--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/events.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/events.get.properties
@@ -3,9 +3,9 @@ title.completedEvents=Completed
 title.incompleteEvents=Incomplete
 title.completeEvent=Complete Event
 message.completingEvent=Completing event
-message.completeEventFailure=Event could not be completed
+message.completeEventFailure=Event couldn't be completed
 message.revokingEvent=Revoking event
-message.revokeEventFailure=Event could not be revoked
+message.revokeEventFailure=Event couldn't be revoked
 label.automatic=Automatic
 label.manual=Manual
 label.completedBy=Completed by
@@ -16,5 +16,5 @@ label.noEventsInDispositionSchedule=There are no events for step ''{0}''.
 label.completeDispositionSchedule=Disposition life cycle complete.
 label.dispositionScheduleAppliedToFolder=Disposition schedule applied to parent Record Folder, with as of date: {0}.
 label.linkToFoldersDispositionSchedule=View Parent Folder Events
-label.loadFailure=Could not load Events
+label.loadFailure=Couldn't load Events
 button.completeEvent=Complete Event
