--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get.properties
@@ -1,8 +1,8 @@
-message.getpermissionsfail=Failed to retrieve permissions from the server.
+message.getpermissionsfail=Couldn't retrieve permissions from the server.
 message.selectauthority=Select a User or Group
-message.authoritypickerfail=Could not load Authority Finder component.
+message.authoritypickerfail=Couldn't load Authority Finder component.
 message.finish-success=Successfully updated permissions.
-message.finish-failure=Failed to update permissions: {0}
+message.finish-failure=Couldn't update permissions: {0}
 
 label.title=Manage Permissions: {0}
 label.inherit=Inherit Permissions
