--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get.properties
@@ -7,4 +7,4 @@ label.required = Required Field
 label.create=Create
 label.cancel=Cancel
 label.fileplan= File Plan
-message.createfail=Creation of new reference failed
+message.createfail=Couldn't create new reference
