--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-condition.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-condition.get.properties
@@ -5,8 +5,8 @@ label.noRendererForType=Error: No renderer for type ''{0}''
 label.is=is
 label.sizeUnit=bytes
 label.transientProperty={0} in {1}
-message.getPropertiesFailure=Could not load properties
-message.getTagFailure=Could not load tag
+message.getPropertiesFailure=Couldn't load properties
+message.getTagFailure=Couldn't load tag
 
 ## Format used for date entry in date picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under date entry field
