--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get.properties
@@ -19,5 +19,5 @@ header.unless=Unless
 header.action=Perform Action
 message.creating=Creating rule...
 message.updating=Updating rule...
-message.persist-failure=Failed to persist rule
+message.persist-failure=Couldn't persist rule
 message.createAnotherRule=Successfully created rule 
