--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-header.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-header.get.properties
@@ -8,8 +8,8 @@ message.inheritToggle-success-off=Inherited rules are disabled
 menu.run=Run Rules...
 menu.option.run=Run rules for this folder
 menu.option.run-recursive=Run rules for this folder and its subfolders
-message.getRules-failure=Failed to load rules
+message.getRules-failure=Couldn't load rules
 message.runningRules=Running rule(s)...
 message.runRules-success=Rule(s) successfully run
-message.runRules-failure=Could not run rules
+message.runRules-failure=Couldn't run rules
 filePlan.label = File Plan
