--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get.properties
@@ -10,7 +10,7 @@ message.selectdate=Select Date
 message.deletesearch.title=Delete Search
 message.deletesearch.description=Are you sure you want to delete search ''{0}''?
 message.deletesearch.success=Search was successfully deleted.
-message.deletesearch.failure=Search could not be deleted.
+message.deletesearch.failure=Search couldn't be deleted.
 
 label.searchtitle=Search
 label.searchterm=Query Text
