--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get.properties
@@ -20,7 +20,7 @@ label.comments=Comments
 
 message.uploading=Document is being uploaded...
 message.success=Document successfully uploaded
-message.failure=Document could not be uploaded
+message.failure=Document couldn't be uploaded
 
 label.contentType=Content Type
 type.cm_content=Content
