--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get.properties
@@ -9,7 +9,7 @@ copy.button=Copy
 copy.message.no-files=At least one file must be supplied
 copy.message.please-wait=Files being copied...
 copy.message.success=Successfully copied {0} items
-copy.message.failure=The Copy To operation could not be completed
+copy.message.failure=Couldn't copy the items
 
 ## Move To
 move.node.root=File Plan
@@ -19,7 +19,7 @@ move.button=Move
 move.message.no-files=At least one file must be supplied
 move.message.please-wait=Files being moved...
 move.message.success=Successfully moved {0} items
-move.message.failure=The Move To operation could not be completed
+move.message.failure=Couldn't move the items
 
 ## Link To
 link.node.root=File Plan
@@ -29,7 +29,7 @@ link.button=Link
 link.message.no-files=At least one file must be supplied
 link.message.please-wait=Files being linked...
 link.message.success=Successfully linked {0} items
-link.message.failure=The 'Link To' operation could not be completed
+link.message.failure=Couldn't link the items
 
 ## File To
 file.node.root=File Plan
@@ -39,4 +39,4 @@ file.button=File
 file.message.no-files=At least one file must be supplied
 file.message.please-wait=Files being filed...
 file.message.success=Successfully filed {0} items
-file.message.failure=The 'File To' operation could not be completed
+file.message.failure=Couldn't file the items
