--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get.properties
@@ -11,10 +11,10 @@ button.newevent=New Event
 message.confirm.removeevent.title=Remove event
 message.confirm.removeevent.text=Are you sure you want to remove ''{0}''?
 message.removeevent.success=Successfully removed event.
-message.removeevent.failure=Failed to remove event.
+message.removeevent.failure=Couldn't remove event.
 message.saveevent.saving=Saving event...
-message.loadevent.failure=Could not load data for the event.
-message.loadevents.failure=Could not load the events.
+message.loadevent.failure=Couldn't load data for the event.
+message.loadevents.failure=Couldn't load the events.
 message.loadevents.loading=Loading events...
 message.empty=No events exist.
 message.error=Could not load events.
