--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
@@ -53,17 +53,17 @@ menu.selected-items.unfreeze=Unfreeze
 ## Pop-up Messages
 message.file.type=Are you filing an Electronic or Non-electronic Record?
 message.file.type.title=Filing Type
-message.multiple-delete.failure=Could not delete items
+message.multiple-delete.failure=Couldn't delete items
 message.multiple-delete.success=Successfully deleted {0} item(s)
 title.multiple-delete.confirm=Confirm Multiple Delete
 message.multiple-delete.confirm=Are you sure you want to delete the following {0} items?
 message.multiple-delete.please-wait=Please wait. Files being deleted...
-message.new-folder.failure=Could not create folder
-message.new-category.failure=Could not create category
+message.new-folder.failure=Couldn't create folder
+message.new-category.failure=Couldn't create category
 message.new-folder.success=Folder ''{0}'' created
-message.new-record.failure=Could not create ''{0}''
+message.new-record.failure=Couldn't create ''{0}''
 message.new-record.success=Record ''{0}'' created
-message.load-top-level-assets.failure=Could not export all since top level assets couldn't be loaded
+message.load-top-level-assets.failure=Couldn't export all because top level assets couldn't be loaded
 message.nothing-to-export=Nothing to export
 
 ## Toolbar Modes
@@ -80,12 +80,6 @@ description.holds.more.filterDisplay=currently viewing "{0}"
 description.unfiledRecords=Unfiled Records
 description.unfiledRecords.more=(Records that are not Filed)
 description.unfiledRecords.more.filterDisplay=currently viewing "{0}"
-
-## Toolbar Menu Items
-menu.select.records=Records
-menu.select.undeclaredRecords=Undeclared Records
-menu.select.recordFolders=Record Folders
-menu.select.recordCategories=Record Categories
 
 ## Browser dialogs
 label.filter-description.acp=Alfresco Content Package file (.acp)
