--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/manage-references.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/manage-references.get.properties
@@ -4,7 +4,7 @@ label.delete=Delete
 label.done=Done
 label.new-reference=New Reference
 label.no-references=No references
-message.delete.fail=Deletion of reference failed
+message.delete.fail=Couldn't delete reference
 message.delete.success=Reference deleted
 label.references-from=References from other records
 label.references-to=References to other records
