--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get.properties
@@ -7,7 +7,7 @@ header.when=When
 header.if=If
 header.unless=Unless
 header.action=Perform Action
-message.getRuleFailure=Could not load rule information
+message.getRuleFailure=Couldn't load rule information
 message.deletingRule=Deleting rule...   
 message.confirm.delete.title=Delete rule
 message.confirm.delete=Are you sure you want to delete the rule?
