--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get.properties
@@ -10,7 +10,7 @@ label.browse=Select file(s) to upload
 label.multiUploadTip=Use CTRL or SHIFT to select multiple files
 label.singleUpdateTip=Click icon to upload a new version of {0}
 label.noFiles=No files to display, click icon to select file(s) to upload
-label.noFlash=You need a Flash Player of version 9.0.45 to use this component. You can download the latest version of Flash Player from the \
+label.noFlash=Flash Player version 9.0.45 or later required to use this component. You can download the latest version of Flash Player from the \
   <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player Download Center</a>.
 label.success=Success
 label.failure=Failure
