--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-transfer-report.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-transfer-report.get.properties
@@ -1,4 +1,4 @@
-header=Choose the destination record folder
+header=Select the destination record folder
 
 node.root=File Plan
 title.single=File Transfer {0} Report to...
