RM-680 (Request for information: too long message)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@54014 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -404,3 +404,6 @@ rm.wf.selected-users-and-groups=Users and groups
 rm.wf.give-details=Provide information
 rm.wf.message=Message
 rm.wf.details=Details
+
+## Text length validation
+message.max.text.length.validation=The text cannot be longer than {max} characters
