Added missing properties
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@54015 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get.properties
@@ -23,6 +23,8 @@ message.error=Couldn't load data.
 message.addvalue.failure=Couldn't add value ''{0}''
 message.addlist.failure.title=Failed to add list
 message.addlist.failure.text=Couldn't add list: {0}
+message.renamelist.failure.title=Failed to rename list
+message.renamelist.failure.text=Couldn't rename list: {0}
 message.confirm.removevalue.title=Remove value
 message.confirm.removevalue.text=Are you sure you want to remove ''{0}''?
 message.deletevalue.failure=Failed to delete value.
