RM-827 (Icons of the set record type isn't appeared near the record)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@54112 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -219,6 +219,10 @@ status.rm-vital-record=Vital Record
 status.rm-rejected-record=Rejected
 status.rm-info-requested=Information Requested
 status.rm-disposition-schedule=Record Category has a disposition schedule defined
+status.rm-digital-photograph-record=Digital Photograph Record
+status.rm-pdf-record=Pdf Record
+status.rm-scanned-record=Scanned Record
+status.rm-web-record=Web Record
 # Exif
 status.exif=EXIF metadata available
 
