--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
@@ -2,4 +2,5 @@ header.action=Perform Action:
 button.freeze=Freeze...
 button.reject=Reject...
 button.requestInfo=Request Information...
+button.sendEmail=Message...
 menu.item.select=Select...
