RM-815 (Incorrect message "Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message" is displayed on Create Category/Folder dialog)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@54172 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -412,3 +412,6 @@ rm.wf.details=Details
 
 ## Text length validation
 message.max.text.length.validation=The text cannot be longer than {max} characters
+
+## Validation messages
+Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message=Please select a review period
