RM-776 Send e-mail action missing from RM rules UI
* Removed Javascript duplication to use the one from the core product

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@54221 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
@@ -2,5 +2,5 @@ header.action=Perform Action:
 button.freeze=Freeze...
 button.reject=Reject...
 button.requestInfo=Request Information...
-button.sendEmail=Message...
+button.message=Message...
 menu.item.select=Select...
