--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -360,9 +360,9 @@ details.hold-container.reason.none=Not Available
 
 ## Pop-up Messages
 # General
-message.loading=Loading the File Plan...
-message.error=Couldn't access the File Plan
-message.empty=No items
+rm.message.loading=Loading the File Plan...
+rm.message.error=Couldn't access the File Plan
+rm.message.empty=No items
 
 ## File Upload (upload new version)
 label.filter-description=Same type as {0}
@@ -375,7 +375,7 @@ tip.insitu-rename=Rename
 tip.insitu-tag=Tag
 
 ## Help panels, including Drag and Drop
-show.folders=Show {0} subfolder(s)=======
+show.folders=Show {0} subfolder(s)
 
 details.undeclared-record.info=Incomplete Record
 details.record.identifier=Unique Record Identifier
