RM-855 (With RM installed the loading messages in the doclib says "Loading the File Plan" in non RM sites)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@54250 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
@@ -84,3 +84,9 @@ description.unfiledRecords.more.filterDisplay=currently viewing "{0}"
 ## Browser dialogs
 label.filter-description.acp=Alfresco Content Package file (.acp)
 label.filter-description.zip=Archive package (.zip)
+
+## Pop-up Messages
+# General
+message.loading=Loading the File Plan...
+message.error=Couldn't access the File Plan
+message.empty=No items
