--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
@@ -2,5 +2,9 @@ header.action=Perform Action:
 button.freeze=Freeze...
 button.reject=Reject...
 button.requestInfo=Request Information...
+button.select-folder=Select...
 button.message=Message...
 menu.item.select=Select...
+
+label.setProperty.property=Set property:
+label.setProperty.value=to:
