--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
@@ -8,3 +8,13 @@ menu.item.select=Select...
 
 label.setProperty.property=Set property:
 label.setProperty.value=to:
+
+## Format used for date entry in date picker, 'entry' format is used by date parsing code,
+## 'display' format is shown to the user under date entry field
+form.control.date-picker.entry.date.format=d/M/yyyy
+form.control.date-picker.display.date.format=DD/MM/YYYY
+
+## Format used for time entry in datetime picker, 'entry' format is used by date parsing code,
+## 'display' format is shown to the user under time entry field
+form.control.date-picker.entry.time.format=HH:mm
+form.control.date-picker.display.time.format=HH:MM (24 Hour)
