Revert the updated SOLR and Test dependencies for RM
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@54595 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,8 @@ alfrescoEnterpriseMavenPwd=
 # set to org.alfresco.enterprise when enterprise version required
 alfrescoGroupId=org.alfresco
 alfrescoBaseVersion=4.2-ENTERPRISE-HEAD-1439
-alfrescoBaseSolrVersion=4.2.0-SNAPSHOT
-alfrescoTestDepsVersion=4.2.0-SNAPSHOT
+alfrescoBaseSolrVersion=4.2.c
+alfrescoTestDepsVersion=4.2.0-QA-SNAPSHOT
 
 # indicates whether this is a local build or not
 localBuild=true
