RM-914: "Retain" action is absent
 * ensured scheduled job executes retain successfully
 * added UI action "End Retention" .. allowing user to manually end the retention when eligible



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@54955 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -135,6 +135,7 @@ actions.hide-record=Hide Record
 actions.reject=Reject
 actions.request-info=Request Information
 actions.file-destruction-report=Generate Destruction Report
+actions.end-retention=End Retention
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
@@ -201,6 +202,8 @@ message.reject.failure=Couldn't reject ''{0}''
 message.reject.success=''{0}'' rejected
 message.file-destruction-report.failure=Couldn't generate destruction report
 message.file-destruction-report.success=Destruction report generated
+message.end-retention.failure=Couldn't end retention
+message.end-retention.success=Retention ended
 
 
 ## File Plan Status Indicators
