--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
@@ -9,6 +9,8 @@ menu.item.select=Select...
 label.setProperty.property=Set property:
 label.setProperty.value=to:
 
+dialog.destination.title=Select destination folder
+
 ## Format used for date entry in date picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under date entry field
 form.control.date-picker.entry.date.format=d/M/yyyy
