--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
@@ -4,6 +4,7 @@ button.reject=Reject...
 button.requestInfo=Request Information...
 button.select-folder=Select...
 button.message=Message...
+button.addRecordTypes=Record Types...
 menu.item.select=Select...
 
 label.setProperty.property=Set property:
