--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
@@ -21,3 +21,20 @@ form.control.date-picker.display.date.format=DD/MM/YYYY
 ## 'display' format is shown to the user under time entry field
 form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM (24 Hour)
+
+record.folder.path.title=Click to show help text for the record folder path field.
+record.folder.path.help=<p>The following substitutions are allowed:</p>\
+   <p></p>\
+   <p>date.day.short = Sun</p>\
+   <p>date.day = Sun</p>\
+   <p>date.day.long = Sunday</p>\
+   <p>date.day.number = 7 (1-7)</p>\
+   <p>date.day.year = 216 (001-365)</p>\
+   <p>date.month.short = Aug</p>\
+   <p>date.month = Aug</p>\
+   <p>date.month.long = August</p>\
+   <p>date.month.number = 08 (01-12)</p>\
+   <p>date.year.short = 13</p>\
+   <p>date.year = 13</p>\
+   <p>date.year.long = 2013</p>\
+   <p>date.year.week = 31 (01-52)</p>\
