Some translations fixes for RM-183
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@55348 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get.properties
@@ -69,3 +69,5 @@ label.dialog-title=Details of {0} event
 label.property=Property
 label.previous-value=Previous Value
 label.new-value=New Value
+
+message.load-peopleFinder-failure=Couldn't load 'People Finder' component
