--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get.properties
@@ -18,3 +18,19 @@ message.loadevents.failure=Couldn't load the events.
 message.loadevents.loading=Loading events...
 message.empty=No events exist.
 message.error=Could not load events.
+
+
+# Default events
+rmevent.case_closed=Case Closed
+rmevent.abolished=Abolished
+rmevent.re_designated=Redesignated
+rmevent.no_longer_needed=No longer needed
+rmevent.superseded=Superseded
+rmevent.study_complete=Study Complete
+rmevent.training_complete=Training Complete
+rmevent.related_record_trasfered_inactive_storage=Related Record Transferred To Inactive Storage
+rmevent.obsolete=Obsolete
+rmevent.all_allowances_granted_are_terminated=All Allowances Granted Are Terminated
+rmevent.WGI_action_complete=WGI action complete
+rmevent.separation=Separation
+rmevent.case_complete=Case Complete
