RM-806 Unclear work of Results Options components
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@55711 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get.properties
@@ -14,13 +14,19 @@ message.deletesearch.failure=Search couldn't be deleted.
 
 label.searchtitle=Search
 label.searchterm=Query Text
-label.records=Records
-label.undeclared=Incomplete
 label.criteria=Critera
 label.results=Results
 label.insertfield=Insert Field
 label.select=Select...
 label.insertdate=Insert Date
+
+label.records=Show Records (Completed only)
+label.undeclared=Include Incomplete
+label.vital=Show Vital only
+label.recordFolders=Show Record Folders
+label.recordCategories=Show Record Categories
+label.frozen=Show Frozen only (Excluded when not selected)
+label.cutoff=Show Cut Off only
 
 button.newsearch=New Search
 button.savesearch=Save Search...
@@ -41,13 +47,9 @@ label.sortAscending=Ascending
 label.sortDescending=Descending
 label.dueForReview=Due for Review
 label.components=Components
-label.vital=Vital
-label.recordFolders=Record Folders
-label.recordCategories=Record Categories
 label.recordSeries=Record Series
 label.parentFolder=Parent Folder
-label.frozen=Frozen
-label.cutoff=Cut Off
+
 
 # RMA search model metadata fields
 label.dispositionEvents=Disposition Events
