RM-977 Record label on documents needs changing to icon
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@55933 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -226,6 +226,7 @@ status.rm-digital-photograph-record=Digital Photograph Record
 status.rm-pdf-record=Pdf Record
 status.rm-scanned-record=Scanned Record
 status.rm-web-record=Web Record
+status.rm-is-record=Record
 # Exif
 status.exif=EXIF metadata available
 
@@ -375,6 +376,7 @@ tip.insitu-tag=Tag
 show.folders=Show {0} subfolder(s)
 
 details.undeclared-record.info=Incomplete Record
+details.rejected-record.info=Rejected Record
 details.record.identifier=Unique Record Identifier
 details.record.originator=Originator
 details.record.originating-organization=Originating Organization
