RM-535: form.control.object-picker.items-list.empty and form.control.object-picker.items-list.loading are incorrectly displayed
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@56002 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -414,3 +414,7 @@ message.max.text.length.validation=The text cannot be longer than {max} characte
 
 ## Validation messages
 Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message=Please select a review period
+
+## Forms
+form.control.object-picker.items-list.empty=No Items
+form.control.object-picker.items-list.loading=Loading ...
