RM-988: I18N id's not being looked up
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@56008 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -195,7 +195,7 @@ subprojects {
         rename { String filename -> warFile }
 	}
 
-	task explodeDeps(dependsOn: fetchWarFile) << {
+	task explodeDeps << {
 	
 		explodedDir = file(explodedDepsDir)
 		explodedLibDir = file(explodedLibsDir)
