--- a/gradle.properties
+++ b/gradle.properties
@@ -15,9 +15,9 @@ alfrescoEnterpriseMavenPwd=
 
 # set to org.alfresco.enterprise when enterprise version required
 alfrescoGroupId=org.alfresco
-alfrescoBaseVersion=4.2-ENTERPRISE-HEAD-1513
+alfrescoBaseVersion=4.2-ENTERPRISE-HEAD-1538
 alfrescoBaseSolrVersion=4.2.c
-alfrescoTestDepsVersion=4.2.0-QA-SNAPSHOT
+alfrescoTestDepsVersion=4.2.0-SNAPSHOT
 
 # indicates whether this is a local build or not
 localBuild=true
