Upgrade Alfresco dependencies to 4.2.0-RC2
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@56678 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,9 +15,9 @@ alfrescoEnterpriseMavenPwd=
 
 # set to org.alfresco.enterprise when enterprise version required
 alfrescoGroupId=org.alfresco
-alfrescoBaseVersion=4.2-ENTERPRISE-HEAD-1538
+alfrescoBaseVersion=4.2.0-RC2
 alfrescoBaseSolrVersion=4.2.c
-alfrescoTestDepsVersion=4.2.0-SNAPSHOT
+alfrescoTestDepsVersion=4.2.0-RC2
 
 # indicates whether this is a local build or not
 localBuild=true
