--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,10 @@ alfrescoTestDepsVersion=4.2.0-RC2
 
 # indicates whether this is a local build or not
 localBuild=true
+
+moduleProperties=module.properties
+fileMapping=file-mapping.properties
+buildDistDir=build/dist
+buildLibDir=build/libs
+assembleDir=build/assemble
+i18nDir=build/i18n
