--- a/rm-share/build.gradle
+++ b/rm-share/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-	alfrescoDeps group: alfrescoGroupId, name: 'share', version: alfrescoBaseVersion, type: 'war'
+    alfrescoDeps "${alfrescoGroupId}:share:${alfrescoBaseVersion}@war"    
 }
