alfrescoBaseSolrVersion, alfrescoTestDepsVersion now default to alfrescoBaseVersion.  You can still set them by a command line  -PalfrescoBaseSolrVersion=gethin or putting an entry in the gradle.properties
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@56737 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ ext {
     distDir = 'dist'
     packageBaseName = "${groupid}-${packageName}-${version}-${build}"
     packageZipFile = "${packageBaseName}.zip"
+    if (!project.hasProperty('alfrescoBaseSolrVersion')) alfrescoBaseSolrVersion=alfrescoBaseVersion
+    if (!project.hasProperty('alfrescoTestDepsVersion')) alfrescoTestDepsVersion=alfrescoBaseVersion
 }
 
 /** Package Build Tasks */
