--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # build details
 groupid=alfresco
 packageName=rm
-version=2.1.0
+version=2.1.1
 build=dev
 
 # maven urls's
@@ -15,7 +15,7 @@ alfrescoEnterpriseMavenPwd=
 
 # set to org.alfresco.enterprise when enterprise version required
 alfrescoGroupId=org.alfresco
-alfrescoBaseVersion=4.2.0-RC4
+alfrescoBaseVersion=4.2.0
 
 # indicates whether this is a local build or not
 localBuild=true
